--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -31,6 +31,7 @@
     "    !pip install -q --upgrade pip\n",
     "    !pip install -q --upgrade psutil\n",
     "    !pip install -q pytz\n",
+    "    !pip install pyngrok\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
     "    %conda update -q -n base conda\n",
@@ -51,6 +52,8 @@
     "\n",
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
     "    !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
+    "    !git clone --depth 1 https://github.com/comfyanonymous/ComfyUI SDZC\n",
+    "    \n",
     "    \n",
     "    #Config\n",
     "    %cd /home/studio-lab-user/SDZ\n",
@@ -124,8 +127,8 @@
     "    !git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "\n",
-    "    !git clone https://github.com/Gourieff/sd-webui-reactor\n",
-    "    !sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
+    "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
+    "    #!sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
     "\n",
     "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
@@ -134,11 +137,11 @@
     "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
     "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
     "\n",
-    "    !git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
-    "    !mkdir -p /tmp/animatediff_models\n",
-    "    !rm -rd ~/SDZ/extensions/sd-webui-animatediff/model\n",
-    "    !ln -vs /tmp/animatediff_models /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model -o mm_sd_v15_v2.ckpt\n",
+    "    #!git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
+    "    #!mkdir -p /tmp/animatediff_models\n",
+    "    #!rm -rd ~/SDZ/extensions/sd-webui-animatediff/model\n",
+    "    #!ln -vs /tmp/animatediff_models /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model -o mm_sd_v15_v2.ckpt\n",
     "\n",
     "    #!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-controlnet-animatediff\n",
@@ -166,6 +169,12 @@
     "    !git clone https://github.com/fkunn1326/openpose-editor.git\n",
     "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
     "    #!git clone https://github.com/hnmr293/posex.git\n",
+    "\n",
+    "    #https://github.com/if-ai/IF_prompt_MKR.git\n",
+    "    #https://github.com/pkuliyi2015/multidiffusion-upscaler-for-automatic1111.git\n",
+    "    #https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+    "    #https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+    "    #https://github.com/hako-mikan/sd-webui-regional-prompter.git\n",
     "\n",
     "    #!git clone https://github.com/A-I-Channel/explorer-image\n",
     "    #!git clone https://github.com/A-I-Channel/public-link\n",
@@ -223,6 +232,28 @@
     "    #!git clone https://github.com/Em1tSan/sd-webui-roop-unlock\n",
     "\n",
     "    #https://github.com/victorchall/EveryDream2trainer\n",
+    "\n",
+    "    folder_delete2 = [\n",
+    "        '/home/studio-lab-user/SDZC/ComfyUI_ADV_CLIP_emb',\n",
+    "        '/home/studio-lab-user/SDZC/ComfyUI_NestedNodeBuilder',\n",
+    "        '/home/studio-lab-user/SDZC/ComfyUI_UltimateSDUpscale',\n",
+    "        '/home/studio-lab-user/SDZC/ComfyUI-Custom-Scripts',\n",
+    "        '/home/studio-lab-user/SDZC/ComfyUI-Manager',\n",
+    "        '/home/studio-lab-user/SDZC/efficiency-nodes-comfyui',\n",
+    "        '/home/studio-lab-user/SDZC/SD-Latent-Upscaler'\n",
+    "    ]\n",
+    "    for folder in folder_delete2:\n",
+    "        if os.path.exists(folder):\n",
+    "            shutil.rmtree(folder)\n",
+    "    \n",
+    "    %cd /home/studio-lab-user/SDZC\n",
+    "    !git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive\n",
+    "    !git clone https://github.com/ltdrdata/ComfyUI-Manager\n",
+    "    !git clone https://github.com/pythongosssss/ComfyUI-Custom-Scripts\n",
+    "    !git clone https://github.com/city96/SD-Latent-Upscaler\n",
+    "    !git clone https://github.com/LucianoCirino/efficiency-nodes-comfyui\n",
+    "    !git clone https://github.com/BlenderNeko/ComfyUI_ADV_CLIP_emb\n",
+    "    !git clone https://github.com/ssitu/ComfyUI_NestedNodeBuilder\n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
     "    !rm -rd ~/SDZ/models/ESRGAN\n",
@@ -335,6 +366,7 @@
     "\n",
     "            %cd ~/SDZ/models/Stable-diffusion\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors -o d2.safetensors\n",
+    "            #!wget --timestamping https://huggingface.co/SimianLuo/LCM_Dreamshaper_v7/resolve/main/LCM_Dreamshaper_v7_4k.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v3.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/143906\n",
     "            #!wget --no-check-certificate --content-disposition https://civitai.com/api/download/models/15236\n",
@@ -463,6 +495,38 @@
     "    !rm -rf ~/.cache\n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
+    "    \n",
+    "def opcion4():\n",
+    "    %cd /home/studio-lab-user/SDZC\n",
+    "    clear_output()\n",
+    "\n",
+    "    print(COLOR_WHITE + \"CREATE NGROK TOKEN >>> https://dashboard.ngrok.com/get-started/your-authtoken\" + COLOR_RESET)\n",
+    "    print(COLOR_CYAN + \"SDZ CANT RUN IF YOU ENTER A INVALID NGROK TOKEN\" + COLOR_RESET)\n",
+    "    print(\" \")\n",
+    "    ngrok_token = input(\" Insert ngrok token:\")\n",
+    "    clear_output()\n",
+    "    print(COLOR_CYAN + \"SDZ RUNNING\" + COLOR_RESET)\n",
+    "    from threading import Timer\n",
+    "    from queue import Queue\n",
+    "    from pyngrok import ngrok\n",
+    "\n",
+    "    def ngrok_tunnel(port,queue,auth_token):\n",
+    "        ngrok.set_auth_token(auth_token)\n",
+    "        url = ngrok.connect(port)\n",
+    "        queue.put(url)\n",
+    "\n",
+    "    ngrok_output_queue = Queue()\n",
+    "    ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
+    "    ngrok_thread.start()\n",
+    "    ngrok_thread.join()\n",
+    "    print(ngrok_output_queue.get())\n",
+    "\n",
+    "    SDZ_Args = f\"--ngrok {ngrok_token} --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
+    "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" python main.py 2>&1 | grep -o 'URL: https://[^ ]*'\n",
+    "    !pip cache purge\n",
+    "    !rm -rf ~/.cache\n",
+    "    clear_output()\n",
+    "    print(COLOR_CYAN + \"SDZ FINISH\" + COLOR_RESET)\n",
     "       \n",
     "def opcion0():\n",
     "    clear_output()\n",
@@ -478,7 +542,8 @@
     "    print(\"1. Install SDZ\")\n",
     "    print(\"2. Easy Models\")\n",
     "    print(\"3. Run SDZ ///\")\n",
-    "    print(\"4. Tools\")\n",
+    "    print(\"4. Run SDZC\")\n",
+    "    print(\"5. Tools\")\n",
     "    print(\"0. Exit\")\n",
     "    print(\" \")\n",
     "    opcion = input(\" Select an option:\")\n",
@@ -493,6 +558,9 @@
     "        opcion3()\n",
     "    \n",
     "    elif opcion == \"4\":\n",
+    "        opcion4()\n",
+    "    \n",
+    "    elif opcion == \"5\":\n",
     "        clear_output()\n",
     "        while True:  \n",
     "            print(\" \")\n",
