--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -54,7 +54,6 @@
     "    !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
     "    !git clone --depth 1 https://github.com/comfyanonymous/ComfyUI SDZC\n",
     "    \n",
-    "    \n",
     "    #Config\n",
     "    %cd /home/studio-lab-user/SDZ\n",
     "\n",
@@ -62,6 +61,9 @@
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+    "    \n",
+    "    %cd /home/studio-lab-user/SDZC\n",
+    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/extra_model_paths.yaml\n",
     "    \n",
     "    #!pip install -r /home/studio-lab-user/SDZ/requirements_versions.txt\n",
     "    clear_output()\n",
@@ -126,6 +128,10 @@
     "    !git clone https://github.com/richrobber2/canvas-zoom\n",
     "    !git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
+    "    #!git clone https://github.com/djbielejeski/a-person-mask-generator\n",
+    "    #!git clone https://github.com/Flyguygx/sd-webui-panorama-tools\n",
+    "    #!git clone https://github.com/diffus-me/sd-webui-facefusion\n",
+    "    #!git clone https://github.com/0xbitches/sd-webui-lcm\n",
     "\n",
     "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "    #!sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
@@ -233,27 +239,24 @@
     "\n",
     "    #https://github.com/victorchall/EveryDream2trainer\n",
     "\n",
-    "    folder_delete2 = [\n",
-    "        '/home/studio-lab-user/SDZC/ComfyUI_ADV_CLIP_emb',\n",
-    "        '/home/studio-lab-user/SDZC/ComfyUI_NestedNodeBuilder',\n",
-    "        '/home/studio-lab-user/SDZC/ComfyUI_UltimateSDUpscale',\n",
-    "        '/home/studio-lab-user/SDZC/ComfyUI-Custom-Scripts',\n",
-    "        '/home/studio-lab-user/SDZC/ComfyUI-Manager',\n",
-    "        '/home/studio-lab-user/SDZC/efficiency-nodes-comfyui',\n",
-    "        '/home/studio-lab-user/SDZC/SD-Latent-Upscaler'\n",
-    "    ]\n",
-    "    for folder in folder_delete2:\n",
-    "        if os.path.exists(folder):\n",
-    "            shutil.rmtree(folder)\n",
+    "    folderext2 = '/home/studio-lab-user/SDZC/custom_nodes'\n",
+    "\n",
+    "    if os.path.exists(folderext2):\n",
+    "        shutil.rmtree(folderext2)\n",
+    "\n",
+    "    os.mkdir(folderext2)\n",
     "    \n",
-    "    %cd /home/studio-lab-user/SDZC\n",
-    "    !git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive\n",
+    "    %cd /home/studio-lab-user/SDZC/custom_nodes\n",
+    "    !git clone https://github.com/Lerc/canvas_tab\n",
     "    !git clone https://github.com/ltdrdata/ComfyUI-Manager\n",
+    "    !git clone https://github.com/0xbitches/ComfyUI-LCM\n",
+    "    !git clone https://github.com/ssitu/ComfyUI_UltimateSDUpscale --recursive\n",
     "    !git clone https://github.com/pythongosssss/ComfyUI-Custom-Scripts\n",
     "    !git clone https://github.com/city96/SD-Latent-Upscaler\n",
     "    !git clone https://github.com/LucianoCirino/efficiency-nodes-comfyui\n",
     "    !git clone https://github.com/BlenderNeko/ComfyUI_ADV_CLIP_emb\n",
     "    !git clone https://github.com/ssitu/ComfyUI_NestedNodeBuilder\n",
+    "    !git clone https://github.com/RockOfFire/ComfyUI_Comfyroll_CustomNodes\n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
     "    !rm -rd ~/SDZ/models/ESRGAN\n",
@@ -332,7 +335,6 @@
     "    %cd ~/SDZ/models/Lora\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/87153   -o add_detail.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://civitai.com/api/download/models/86247   -o flat2.safetensors\n",
-    "\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
     "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORSDZ15SD2_sd15.safetensors\n",
@@ -341,10 +343,12 @@
     "    !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
     "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/62833\n",
+    "    \n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -o lcm-lora-sd15.safetensors\n",
+    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -o lcm-lora-sdxl.safetensors\n",
     "\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
-    "\n",
     "\n",
     "def opcion2():\n",
     "    clear_output()\n",
@@ -519,6 +523,7 @@
     "    ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
     "    ngrok_thread.start()\n",
     "    ngrok_thread.join()\n",
+    "    !rm -r /home/studio-lab-user/.ngrok2\n",
     "    print(ngrok_output_queue.get())\n",
     "\n",
     "    SDZ_Args = f\"--ngrok {ngrok_token} --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
@@ -541,8 +546,8 @@
     "    print(\" \")\n",
     "    print(\"1. Install SDZ\")\n",
     "    print(\"2. Easy Models\")\n",
-    "    print(\"3. Run SDZ ///\")\n",
-    "    print(\"4. Run SDZC\")\n",
+    "    print(\"3. Run SDZ A1111\")\n",
+    "    print(\"4. Run SDZ COMFYUI\")\n",
     "    print(\"5. Tools\")\n",
     "    print(\"0. Exit\")\n",
     "    print(\" \")\n",
