--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -61,11 +61,13 @@
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_user.css -O user.css\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/styles.csv\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_config.json -O config.json\n",
+    "    #!pip install -r /home/studio-lab-user/SDZ/requirements_versions.txt\n",
     "    \n",
     "    %cd /home/studio-lab-user/SDZC\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/extra_model_paths.yaml\n",
+    "    !pip install -r /home/studio-lab-user/SDZC/requirements.txt\n",
     "    \n",
-    "    #!pip install -r /home/studio-lab-user/SDZ/requirements_versions.txt\n",
+    "    \n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ INSTALLED\" + COLOR_RESET)\n",
     "\n",
@@ -130,8 +132,11 @@
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "    #!git clone https://github.com/djbielejeski/a-person-mask-generator\n",
     "    #!git clone https://github.com/Flyguygx/sd-webui-panorama-tools\n",
-    "    #!git clone https://github.com/diffus-me/sd-webui-facefusion\n",
     "    #!git clone https://github.com/0xbitches/sd-webui-lcm\n",
+    "\n",
+    "    #!git clone https://github.com/diffus-me/sd-webui-facefusion\n",
+    "    #!wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/predictor.py\n",
+    "    #!wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/utilities.py\n",
     "\n",
     "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "    #!sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
