--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -19,6 +19,14 @@
     "COLOR_WHITE = '\\033[97m'\n",
     "COLOR_RESET = '\\033[0m'\n",
     "\n",
+    "#install Python 3.10.6 in terminal - !python --version\n",
+    "\"\"\"\n",
+    "conda create -n py3106 python=3.10.6\n",
+    "conda activate py3106\n",
+    "conda install ipykernel\n",
+    "python -m ipykernel install --user --name py3106 --display-name \"Python 3.10.6\"\n",
+    "\"\"\"\n",
+    "\n",
     "def opcion1():\n",
     "    print(COLOR_CYAN + \"WAIT A MOMENT WHILE THE INSTALLATION FINISH\" + COLOR_RESET)\n",
     "    !ln -vs /tmp ~/tmp\n",
@@ -135,6 +143,7 @@
     "    #!git clone https://github.com/0xbitches/sd-webui-lcm\n",
     "\n",
     "    #!git clone https://github.com/diffus-me/sd-webui-facefusion\n",
+    "    #!pip install -r /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/requirements.txt\n",
     "    #!wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/predictor.py\n",
     "    #!wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/utilities.py\n",
     "\n",
