--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "#install Python 3.10.6 in terminal - !python --version\n",
     "\"\"\"\n",
-    "conda create -n py3106 python=3.10.6\n",
+    "conda create -n py3106 python=3.10.6 -y\n",
     "conda activate py3106\n",
     "conda install ipykernel\n",
     "python -m ipykernel install --user --name py3106 --display-name \"Python 3.10.6\"\n",
