--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -13,7 +13,7 @@
     "import shutil\n",
     "from IPython.display import clear_output, Image, display, HTML\n",
     "from IPython.utils import capture\n",
-    "import requests\n",
+    "#import requests\n",
     "import importlib.util\n",
     "COLOR_CYAN = '\\033[96;1;38;5;51m'\n",
     "COLOR_WHITE = '\\033[97m'\n",
@@ -40,6 +40,7 @@
     "    !pip install -q --upgrade psutil\n",
     "    !pip install -q pytz\n",
     "    !pip install pyngrok\n",
+    "    !pip install requests\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
     "    %conda update -q -n base conda\n",
