--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -13,7 +13,7 @@
     "import shutil\n",
     "from IPython.display import clear_output, Image, display, HTML\n",
     "from IPython.utils import capture\n",
-    "#import requests\n",
+    "import requests\n",
     "import importlib.util\n",
     "COLOR_CYAN = '\\033[96;1;38;5;51m'\n",
     "COLOR_WHITE = '\\033[97m'\n",
@@ -21,9 +21,14 @@
     "\n",
     "#install Python 3.10.6 in terminal - !python --version\n",
     "\"\"\"\n",
+    "conda deactivate default\n",
+    "conda deactivate studiolab\n",
+    "conda env remove -n default\n",
+    "conda env remove -n studiolab\n",
+    "\n",
     "conda create -n py3106 python=3.10.6 -y\n",
     "conda activate py3106\n",
-    "conda install ipykernel\n",
+    "conda install ipykernel -y\n",
     "python -m ipykernel install --user --name py3106 --display-name \"Python 3.10.6\"\n",
     "\"\"\"\n",
     "\n",
@@ -40,7 +45,7 @@
     "    !pip install -q --upgrade psutil\n",
     "    !pip install -q pytz\n",
     "    !pip install pyngrok\n",
-    "    !pip install requests\n",
+    "    #!pip install requests\n",
     "    #!pip install -q tensorflow\n",
     "    \n",
     "    %conda update -q -n base conda\n",
@@ -76,6 +81,10 @@
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/extra_model_paths.yaml\n",
     "    !pip install -r /home/studio-lab-user/SDZC/requirements.txt\n",
     "    \n",
+    "    !pip cache purge\n",
+    "    !rm -rf ~/.cache\n",
+    "    %conda clean --all -y\n",
+    "\n",
     "    \n",
     "    clear_output()\n",
     "    print(COLOR_CYAN + \"SDZ INSTALLED\" + COLOR_RESET)\n",
@@ -431,6 +440,7 @@
     "            \n",
     "            !pip cache purge\n",
     "            !rm -rf ~/.cache\n",
+    "            %conda clean --all -y\n",
     "            break \n",
     "\n",
     "            clear_output()\n",
@@ -486,6 +496,7 @@
     "\n",
     "            !pip cache purge\n",
     "            !rm -rf ~/.cache\n",
+    "            %conda clean --all -y\n",
     "            break \n",
     "\n",
     "            clear_output()\n",
