--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -152,14 +152,18 @@
     "    #!git clone https://github.com/Flyguygx/sd-webui-panorama-tools\n",
     "    #!git clone https://github.com/0xbitches/sd-webui-lcm\n",
     "\n",
-    "    #!git clone https://github.com/diffus-me/sd-webui-facefusion\n",
-    "    #!pip install -r /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/requirements.txt\n",
-    "    #!wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/predictor.py\n",
-    "    #!wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/utilities.py\n",
+    "    \"\"\"\n",
+    "    !git clone https://github.com/diffus-me/sd-webui-facefusion\n",
+    "    !pip install -r /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/requirements.txt\n",
+    "    %conda install ffmpeg\n",
+    "    !pip install onnxruntime\n",
+    "    !wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/predictor.py\n",
+    "    !wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/utilities.py\n",
     "\n",
-    "    #!git clone https://github.com/Gourieff/sd-webui-reactor\n",
-    "    #!sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
-    "\n",
+    "    !git clone https://github.com/Gourieff/sd-webui-reactor\n",
+    "    !sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
+    "    \"\"\"\n",
+    "    \n",
     "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!sed -i '17s/.*/    return False/' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
@@ -167,12 +171,13 @@
     "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
     "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
     "\n",
+    "    \"\"\"\n",
     "    #!git clone https://github.com/continue-revolution/sd-webui-animatediff\n",
     "    #!mkdir -p /tmp/animatediff_models\n",
     "    #!rm -rd ~/SDZ/extensions/sd-webui-animatediff/model\n",
     "    #!ln -vs /tmp/animatediff_models /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/guoyww/animatediff/resolve/main/mm_sd_v15_v2.ckpt -d /home/studio-lab-user/SDZ/extensions/sd-webui-animatediff/model -o mm_sd_v15_v2.ckpt\n",
-    "\n",
+    "    \"\"\"\n",
     "    #!git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-controlnet-animatediff\n",
     "    #!git clone https://github.com/DavideAlidosi/sd-webui-animatediff-for-ControlNet\n",
