--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -65,9 +65,11 @@
     "    #!pip install onnxruntime==1.15.0\n",
     "\n",
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
-    "    !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
-    "    !git clone --depth 1 https://github.com/comfyanonymous/ComfyUI SDZC\n",
-    "    \n",
+    "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+    "    !mv stable-diffusion-webui SDZ\n",
+    "    !git clone https://github.com/comfyanonymous/ComfyUI\n",
+    "    !mv stable-diffusion-webui SDZC\n",
+    "\n",
     "    #Config\n",
     "    %cd /home/studio-lab-user/SDZ\n",
     "\n",
@@ -157,6 +159,7 @@
     "    !pip install -r /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/requirements.txt\n",
     "    %conda install ffmpeg\n",
     "    !pip install onnxruntime\n",
+    "    !pip install --upgrade torchsde\n",
     "    !wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/predictor.py\n",
     "    !wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/utilities.py\n",
     "\n",
