--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -159,17 +159,22 @@
     "    !pip install -r /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/requirements.txt\n",
     "    %conda install ffmpeg\n",
     "    !pip install onnxruntime\n",
-    "    !pip install --upgrade torchsde\n",
+    "    !pip install torchsde --upgrade\n",
+    "    !pip install onnxruntime --upgrade\n",
+    "\n",
     "    !wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/predictor.py\n",
     "    !wget --timestamping -P /home/studio-lab-user/SDZ/extensions/sd-webui-facefusion/facefusion https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/fus/utilities.py\n",
+    "    \"\"\"\n",
     "\n",
+    "    \"\"\"\n",
     "    !git clone https://github.com/Gourieff/sd-webui-reactor\n",
     "    !sed -i 's/package: str, version: str | None = None, strict: bool = True/package: str, version: str = None, strict: bool = True/g' /home/studio-lab-user/SDZ/extensions/sd-webui-reactor/install.py\n",
-    "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    #!git clone https://github.com/glucauze/sd-webui-faceswaplab\n",
     "    #!sed -i '17,44d' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
     "    #!sed -i '17s/.*/    return False/' /home/studio-lab-user/SDZ/extensions/sd-webui-faceswaplab/scripts/faceswaplab_utils/imgutils.py\n",
+    "\n",
+    "    \"\"\"\n",
     "\n",
     "    #!git clone https://github.com/s0md3v/sd-webui-roop\n",
     "    #!sed -i 's|shapes.append(chunk\\[\"score\"\\] > 0.7)|shapes.append(chunk[\"score\"] > 99999)|' /home/studio-lab-user/SDZ/extensions/sd-webui-roop/scripts/cimage.py\n",
