--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -67,8 +67,9 @@
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
     "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
     "    !mv stable-diffusion-webui SDZ\n",
+    "    %cd /home/studio-lab-user\n",
     "    !git clone https://github.com/comfyanonymous/ComfyUI\n",
-    "    !mv stable-diffusion-webui SDZC\n",
+    "    !mv ComfyUI SDZC\n",
     "\n",
     "    #Config\n",
     "    %cd /home/studio-lab-user/SDZ\n",
@@ -149,6 +150,7 @@
     "    !git clone https://github.com/ArtVentureX/sd-webui-agent-scheduler\n",
     "    !git clone https://github.com/richrobber2/canvas-zoom\n",
     "    !git clone https://github.com/viyiviyi/stable-diffusion-webui-zoomimage\n",
+    "    !git clone https://github.com/wcde/sd-webui-kohya-hiresfix\n",
     "    !git clone https://github.com/Mikubill/sd-webui-controlnet\n",
     "    #!git clone https://github.com/djbielejeski/a-person-mask-generator\n",
     "    #!git clone https://github.com/Flyguygx/sd-webui-panorama-tools\n",
