--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -131,6 +131,11 @@
     "    !rm -rd ~/SDZ/models/Stable-diffusion\n",
     "    !ln -vs /tmp/models /home/studio-lab-user/SDZ/models/Stable-diffusion\n",
     "\n",
+    "    #ClipVision2\n",
+    "    !mkdir -p /tmp/clip_vision2\n",
+    "    !rm -rd ~/SDZ/models/clip_vision\n",
+    "    !ln -vs /tmp/clip_vision2 /home/studio-lab-user/SDZ/models/clip_vision\n",
+    "\n",
     "    #controlnet\n",
     "    !mkdir -p /tmp/controlnet_models\n",
     "    !rm -rd ~/SDZ/extensions/sd-webui-controlnet/models\n",
@@ -296,6 +301,14 @@
     "    !git clone https://github.com/BlenderNeko/ComfyUI_ADV_CLIP_emb\n",
     "    !git clone https://github.com/ssitu/ComfyUI_NestedNodeBuilder\n",
     "    !git clone https://github.com/RockOfFire/ComfyUI_Comfyroll_CustomNodes\n",
+    "    !git clone https://github.com/Acly/comfyui-tooling-nodes\n",
+    "    !git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus\n",
+    "    !git clone https://github.com/Fannovel16/comfyui_controlnet_aux\n",
+    "    #!git clone https://github.com/chrisgoringe/cg-use-everywhere\n",
+    "\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/openai/clip-vit-large-patch14/resolve/main/pytorch_model.bin -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o pytorch_model.bin\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
+    "\n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
     "    !rm -rd ~/SDZ/models/ESRGAN\n",
@@ -383,7 +396,7 @@
     "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/62833\n",
     "    \n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -o lcm-lora-sd15.safetensors\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -o lcm-lora-sdv1-5.safetensors\n",
     "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -o lcm-lora-sdxl.safetensors\n",
     "\n",
     "    !pip cache purge\n",
