--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -309,6 +309,10 @@
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/pytorch_model.bin -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o pytorch_model.bin\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
     "\n",
+    "    %cd /home/studio-lab-user/SDZC/web/scripts\n",
+    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_app.js -O app.js\n",
+    "    %cd /home/studio-lab-user/SDZC/web\n",
+    "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_user.css -O user.css\n",
     "\n",
     "    !mkdir -p /tmp/ESRGAN\n",
     "    !rm -rd ~/SDZ/models/ESRGAN\n",
