--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -647,6 +647,8 @@
     "                clear_output()\n",
     "                %cd /home/studio-lab-user/SDZ\n",
     "                !git pull\n",
+    "                %cd /home/studio-lab-user/SDZC\n",
+    "                !git pull\n",
     "                clear_output()\n",
     "                print(COLOR_CYAN + \"SDZ UPDATED\" + COLOR_RESET)\n",
     "                \n",
