--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -305,10 +305,7 @@
     "    !git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus\n",
     "    !git clone https://github.com/Fannovel16/comfyui_controlnet_aux\n",
     "    #!git clone https://github.com/chrisgoringe/cg-use-everywhere\n",
-    "\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/pytorch_model.bin -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o pytorch_model.bin\n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
-    "\n",
+    "    \n",
     "    %cd /home/studio-lab-user/SDZC/web/scripts\n",
     "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/ComfyUI_app.js -O app.js\n",
     "    %cd /home/studio-lab-user/SDZC/web\n",
@@ -399,9 +396,6 @@
     "    !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
     "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/62833\n",
-    "    \n",
-    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -o lcm-lora-sdv1-5.safetensors\n",
-    "    #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -o lcm-lora-sdxl.safetensors\n",
     "\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
@@ -467,8 +461,15 @@
     "            !mkdir -p /tmp/clip_vision\n",
     "            !rm -rd ~/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision\n",
     "            !ln -vs /tmp/clip_vision /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/Annotators/resolve/main/clip_g.pth -d /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision -o clip_g.pth\n",
     "\n",
-    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/Annotators/resolve/main/clip_g.pth -d /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision -o clip_g.pth  \n",
+    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+    "    \n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/pytorch_model.bin -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o pytorch_model.bin\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdv1-5.safetensors\n",
+    "\n",
+    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
     "            \n",
     "            !pip cache purge\n",
     "            !rm -rf ~/.cache\n",
@@ -487,6 +488,7 @@
     "            %cd ~/SDZ/models/Stable-diffusion\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/190908\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/166909\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/246043\n",
     "\n",
     "            %cd ~/SDZ/extensions/sd-webui-controlnet/models\n",
     "\n",
@@ -525,6 +527,13 @@
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/t2i-adapter_xl_sketch.safetensors -o t2i-adapter_xl_sketch.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose.safetensors -o thibaud_xl_openpose.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose_256lora.safetensors -o thibaud_xl_openpose_256lora.safetensors\n",
+    "\n",
+    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+    "        \n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/sdxl_models/ip-adapter_sdxl_vit-h.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sdxl_vit-h.safetensors\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdxl.safetensors\n",
+    "            \n",
+    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
     "\n",
     "            !pip cache purge\n",
     "            !rm -rf ~/.cache\n",
