--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -419,7 +419,8 @@
     "            extensions_code()\n",
     "\n",
     "            %cd ~/SDZ/models/Stable-diffusion\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors -o d2.safetensors\n",
+    "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v2.safetensors -o d2.safetensors\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v4.safetensors -o d4.safetensors\n",
     "            #!wget --timestamping https://huggingface.co/SimianLuo/LCM_Dreamshaper_v7/resolve/main/LCM_Dreamshaper_v7_4k.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/XpucT/Deliberate/resolve/main/Deliberate_v3.safetensors\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/143906\n",
@@ -529,7 +530,7 @@
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose_256lora.safetensors -o thibaud_xl_openpose_256lora.safetensors\n",
     "\n",
     "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
-    "        \n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/pytorch_model.bin -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o pytorch_model.bin\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/sdxl_models/ip-adapter_sdxl_vit-h.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sdxl_vit-h.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdxl.safetensors\n",
     "            \n",
