--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -465,8 +465,9 @@
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/Annotators/resolve/main/clip_g.pth -d /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision -o clip_g.pth\n",
     "\n",
     "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+    "            https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/model.safetensors?download=true\n",
     "    \n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/pytorch_model.bin -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o pytorch_model.bin\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/model.safetensors -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o model.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdv1-5.safetensors\n",
     "\n",
@@ -530,7 +531,7 @@
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose_256lora.safetensors -o thibaud_xl_openpose_256lora.safetensors\n",
     "\n",
     "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/pytorch_model.bin -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o pytorch_model.bin\n",
+    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/model.safetensors -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o model.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/sdxl_models/ip-adapter_sdxl_vit-h.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sdxl_vit-h.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdxl.safetensors\n",
     "            \n",
