--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -592,7 +592,7 @@
     "    ngrok_thread = Timer(2, ngrok_tunnel, args=(8188, ngrok_output_queue, ngrok_token))\n",
     "    ngrok_thread.start()\n",
     "    ngrok_thread.join()\n",
-    "    !rm -r /home/studio-lab-user/.ngrok2\n",
+    "    #!rm -r /home/studio-lab-user/.ngrok2\n",
     "    print(ngrok_output_queue.get())\n",
     "\n",
     "    SDZ_Args = f\"--ngrok {ngrok_token} --preview-method auto --enable-cors-header --use-pytorch-cross-attention\"\n",
