--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -113,14 +113,22 @@
     "    !rm -rd ~/SDZ/models/insightface\n",
     "    !ln -vs /tmp/insightface /home/studio-lab-user/SDZ/models/insightface\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/uwg/modelz_base/resolve/main/Extras/roopz/inswapper_128.onnx -d /home/studio-lab-user/SDZ/models/insightface -o inswapper_128.onnx\n",
-    "\n",
+    "    #!rm -rf ~/SDZC/models/insightface\n",
+    "    !ln -vs /tmp/insightface/* /home/studio-lab-user/SDZC/models/insightface\n",
+    "    \n",
     "    !mkdir -p /tmp/Codeformer\n",
     "    !rm -rd ~/SDZ/models/Codeformer\n",
     "    !ln -vs /tmp/Codeformer /home/studio-lab-user/SDZ/models/Codeformer\n",
+    "    !ln -vs /tmp/Codeformer/* /home/studio-lab-user/SDZC/models/facerestore_models\n",
+    "    %cd ~/SDZ/models/Codeformer\n",
+    "    !wget https://github.com/sczhou/CodeFormer/releases/download/v0.1.0/codeformer.pth\n",
     "\n",
     "    !mkdir -p /tmp/GFPGAN\n",
     "    !rm -rd ~/SDZ/models/GFPGAN\n",
     "    !ln -vs /tmp/GFPGAN /home/studio-lab-user/SDZ/models/GFPGAN\n",
+    "    !ln -vs /tmp/GFPGAN/* /home/studio-lab-user/SDZC/models/facerestore_models\n",
+    "    %cd ~/SDZ/models/GFPGAN\n",
+    "    !wget https://github.com/TencentARC/GFPGAN/releases/download/v1.3.4/GFPGANv1.4.pth\n",
     "\n",
     "    !mkdir -p /tmp/deepbooru\n",
     "    !rm -rd ~/SDZ/models/deepbooru\n",
@@ -135,11 +143,8 @@
     "    !mkdir -p /tmp/clip_vision2\n",
     "    !rm -rd ~/SDZ/models/clip_vision\n",
     "    !ln -vs /tmp/clip_vision2 /home/studio-lab-user/SDZ/models/clip_vision\n",
-    "\n",
-    "    #controlnet\n",
-    "    !mkdir -p /tmp/controlnet_models\n",
-    "    !rm -rd ~/SDZ/extensions/sd-webui-controlnet/models\n",
-    "    !ln -vs /tmp/controlnet_models /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/models\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/model.safetensors -d /home/studio-lab-user/SDZ/models/clip_vision/SD1.5 -o model.safetensors\n",
+    "    !ln -vs /tmp/clip_vision2/* /home/studio-lab-user/SDZC/models/clip_vision\n",
     "\n",
     "    #extensions\n",
     "    %cd ~/SDZ/extensions\n",
@@ -283,6 +288,13 @@
     "\n",
     "    #https://github.com/victorchall/EveryDream2trainer\n",
     "\n",
+    "    \n",
+    "    #controlnet\n",
+    "    !mkdir -p /tmp/controlnet_models\n",
+    "    !rm -rd ~/SDZ/extensions/sd-webui-controlnet/models\n",
+    "    !ln -vs /tmp/controlnet_models /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/models\n",
+    "    \n",
+    "\n",
     "    folderext2 = '/home/studio-lab-user/SDZC/custom_nodes'\n",
     "\n",
     "    if os.path.exists(folderext2):\n",
@@ -397,6 +409,7 @@
     "    !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
     "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
     "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://civitai.com/api/download/models/62833\n",
+    "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdv1-5.safetensors\n",
     "\n",
     "    !pip cache purge\n",
     "    !rm -rf ~/.cache\n",
@@ -466,11 +479,8 @@
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/Annotators/resolve/main/clip_g.pth -d /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision -o clip_g.pth\n",
     "\n",
     "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
-    "            https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/model.safetensors?download=true\n",
-    "    \n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/model.safetensors -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o model.safetensors\n",
+    "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
-    "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdv1-5/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdv1-5.safetensors\n",
     "\n",
     "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
     "            \n",
