--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -317,6 +317,7 @@
     "    !git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus\n",
     "    !git clone https://github.com/Fannovel16/comfyui_controlnet_aux\n",
     "    !git clone https://github.com/Gourieff/comfyui-reactor-node\n",
+    "    !git clone https://github.com/mav-rik/facerestore_cf\n",
     "    #!git clone https://github.com/chrisgoringe/cg-use-everywhere\n",
     "    \n",
     "    %cd /home/studio-lab-user/SDZC/web/scripts\n",
@@ -478,11 +479,11 @@
     "            !ln -vs /tmp/clip_vision /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision\n",
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/Annotators/resolve/main/clip_g.pth -d /home/studio-lab-user/SDZ/extensions/sd-webui-controlnet/annotator/downloads/clip_vision -o clip_g.pth\n",
     "\n",
-    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+    "\n",
     "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/models/ip-adapter_sd15.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sd15.safetensors\n",
     "\n",
-    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+    "\n",
     "            \n",
     "            !pip cache purge\n",
     "            !rm -rf ~/.cache\n",
@@ -541,12 +542,11 @@
     "            #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose.safetensors -o thibaud_xl_openpose.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/lllyasviel/sd_control_collection/resolve/main/thibaud_xl_openpose_256lora.safetensors -o thibaud_xl_openpose_256lora.safetensors\n",
     "\n",
-    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+    "\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition  https://huggingface.co/h94/IP-Adapter/resolve/main/models/image_encoder/model.safetensors -d /home/studio-lab-user/SDZC/models/clip_vision/SD1.5 -o model.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/h94/IP-Adapter/resolve/main/sdxl_models/ip-adapter_sdxl_vit-h.safetensors -d /home/studio-lab-user/SDZC/custom_nodes/ComfyUI_IPAdapter_plus/models -o ip-adapter_sdxl_vit-h.safetensors\n",
     "            !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M --content-disposition https://huggingface.co/latent-consistency/lcm-lora-sdxl/resolve/main/pytorch_lora_weights.safetensors -d /home/studio-lab-user/SDZ/models/Lora -o lcm-lora-sdxl.safetensors\n",
-    "            \n",
-    "            \"\"\"\"\"\"\"\"\"\"\"\"\"\"\"\n",
+    "\n",
     "\n",
     "            !pip cache purge\n",
     "            !rm -rf ~/.cache\n",
